--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,33 @@
     <groupId>com.mzh.study</groupId>
     <artifactId>disign-pattern</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <!-- jar包版本设置 -->
+        <slf4j.version>1.7.21</slf4j.version>
+        <log4j.version>2.11.0</log4j.version>
+    </properties>
+    <dependencies>
+        <!-- slf4j 依赖包 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
