add RPC demo (dynamicProxy)

--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,17 @@
             <version>${log4j.version}</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <!-- 编码和编译和JDK版本 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
