--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <!-- jar包版本设置 -->
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>2.11.0</log4j.version>
+        <zk.version>3.4.12</zk.version>
     </properties>
     <dependencies>
         <!-- slf4j 依赖包 -->
@@ -33,6 +34,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zk.version}</version>
         </dependency>
     </dependencies>
     <build>
